--- a/Ugomemo.NET/Ugomemo.NET.csproj
+++ b/Ugomemo.NET/Ugomemo.NET.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BinaryBitLib" Version="1.2.6" />
+  </ItemGroup>
+
 </Project>
