--- a/Ugomemo.NET/Ugomemo.NET.csproj
+++ b/Ugomemo.NET/Ugomemo.NET.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="BinaryBitLib" Version="1.2.6" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
