feat!+tests: add frame parsing.

--- a/Ugomemo.NET.Tests/Ugomemo.NET.Tests.csproj
+++ b/Ugomemo.NET.Tests/Ugomemo.NET.Tests.csproj
@@ -24,6 +24,9 @@
     <None Update="TestFiles\pekira_beach.ppm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestFiles\sample_frame.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
