--- a/Ugomemo.NET.Tests/Ugomemo.NET.Tests.csproj
+++ b/Ugomemo.NET.Tests/Ugomemo.NET.Tests.csproj
@@ -27,6 +27,9 @@
     <None Update="TestFiles\sample_frame.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestFiles\sample_thumbnail.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
